--- a/LightMasterMVVM/LightMasterMVVM/Views/MainWindow.xaml
+++ b/LightMasterMVVM/LightMasterMVVM/Views/MainWindow.xaml
@@ -7,15 +7,63 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         mc:Ignorable="d" d:DesignWidth="800" d:DesignHeight="450"
         x:Class="LightMasterMVVM.Views.MainWindow"
-        Title="LightMasterMVVM">
+        Title="LightMasterMVVM"
+        Background="#121212">
 
     
   <Window.Styles>
     <Style Selector="Button.menu">
-      <Setter Property="Background" Value="#eeeeee"/>
-      <Setter Property="BorderBrush" Value="Gray"/>
-      <Setter Property="BorderThickness" Value="5"/>
-      <Setter Property="Foreground" Value="Gray"/>
+      <Setter Property="Background" Value="#2a7afa"/>
+      <Setter Property="BorderBrush" Value="Black"/>
+      <Setter Property="BorderThickness" Value="3,0,0,3"/>
+      <Setter Property="Foreground" Value="White"/>
+    </Style>
+    <Style Selector="Button.navbuttonselected">
+      <Setter Property="Background" Value="#2a7afa"/>
+      <Setter Property="BorderBrush" Value="Black"/>
+      <Setter Property="BorderThickness" Value="3,0,0,3"/>
+      <Setter Property="Padding" Value="5"/>
+      <Setter Property="Height" Value="35"/>
+      <Setter Property="Width" Value="110"/>
+    </Style>
+    <Style Selector="Button.navbutton">
+      <Setter Property="Background" Value="#242424"/>
+      <Setter Property="BorderBrush" Value="Black"/>
+      <Setter Property="BorderThickness" Value="3,0,0,3"/>
+      <Setter Property="Padding" Value="5"/>
+      <Setter Property="Height" Value="35"/>
+      <Setter Property="Width" Value="110"/>
+    </Style>
+    <Style Selector="Button.navbutton/template/ContentPresenter">
+      <Setter Property = "CornerRadius" Value = "6" />
+    </Style>
+    <Style Selector="Button:pointerover.navbutton/template/ContentPresenter">
+      <Setter Property = "BorderBrush" Value = "Black" />
+      <Setter Property = "Background" Value = "#2c2c2c" />
+    </Style>
+    <Style Selector="Button:pointerover.navbuttonselected/template/ContentPresenter">
+      <Setter Property = "BorderBrush" Value = "Black" />
+      <Setter Property = "Background" Value = "#2a7afa" />
+    </Style>
+    <Style Selector="Button:pressed.navbutton/template/ContentPresenter">
+      <Setter Property = "BorderBrush" Value = "Black" />
+      <Setter Property = "Background" Value = "#141414" />
+    </Style>
+    <Style Selector="Button:pressed.navbuttonselected/template/ContentPresenter">
+      <Setter Property = "BorderBrush" Value = "Black" />
+      <Setter Property = "Background" Value = "#2165d1" />
+    </Style>
+    <Style Selector="Button.navbuttonselected/template/ContentPresenter">
+      <Setter Property = "CornerRadius" Value = "6" />
+    </Style>
+    <Style Selector="Border.navbutton:hover">
+      <Setter Property="Background" Value="#2c2c2c"/>
+    </Style>
+    <Style Selector="Border.navbutton:focus">
+      <Setter Property="Background" Value="#2c2c2c"/>
+    </Style>
+    <Style Selector="Border.navbutton:pressed">
+      <Setter Property="Background" Value="Black"/>
     </Style>
     <Style Selector="Border.show">
       <Style.Animations>
@@ -41,21 +89,6 @@
         </Animation>
       </Style.Animations>
     </Style>
-    <Style Selector="Button.menu:pointerover">
-      <Setter Property="Background" Value="Gray"/>
-      <Setter Property="BorderBrush" Value="Gray"/>
-      <Setter Property="Foreground" Value="White"/>
-    </Style>
-    <Style Selector="Button.menu:focus">
-      <Setter Property="Background" Value="Gray"/>
-      <Setter Property="BorderBrush" Value="Gray"/>
-      <Setter Property="Foreground" Value="White"/>
-    </Style>
-    <Style Selector="Button.menu:pressed">
-      <Setter Property="Background" Value="Gray"/>
-      <Setter Property="BorderBrush" Value="Gray"/>
-      <Setter Property="Foreground" Value="White"/>
-    </Style>
   </Window.Styles>
   <Grid>
     
@@ -63,35 +96,38 @@
       <RowDefinition Height="50"/>
       <RowDefinition Height="*"/>
     </Grid.RowDefinitions>
-    <Grid ColumnDefinitions="120,120,120,120,120,120" RowDefinitions="120" Grid.Row="0" Margin="30,10,30,30" >
+    <Grid ColumnDefinitions="120,120,120,120,120,120,120" RowDefinitions="120" Grid.Row="0" Margin="30,25,30,30" >
       <Grid Grid.Column="0" ColumnDefinitions="*" RowDefinitions="80">
-        <Button x:Name="seeMatches" Name="seeMatches" Classes="menu" CommandParameter="{Binding CurrentMatchNum}" Height="35" Width="110" Grid.Row="0" Margin="30,0,30,60">
-          <TextBlock FontWeight="Bold" Text="Matches"/>
-        </Button>
+        <TextBlock HorizontalAlignment="Center" VerticalAlignment="Top" FontWeight="Bold" Text="LightSwitch" FontSize="20" Foreground="#4e4e4e"/>
       </Grid>
       <Grid Grid.Column="1" ColumnDefinitions="*" RowDefinitions="80">
-        <Button Name="seeTablets" Classes="menu" Command="{Binding SeeTablets}" Grid.Row="0" Margin="30,0,30,60" Width="110" Height="35">
-          <TextBlock FontWeight="Bold" Text="Tablets"/>
+        <Button Classes="navbutton" x:Name="seeMatches" Name="seeMatches" CommandParameter="{Binding CurrentMatchNum}" Height="35" Width="110" Grid.Row="0" Margin="30,0,30,60">
+          <TextBlock HorizontalAlignment="Center" VerticalAlignment="Center" FontWeight="Bold" Text="Matches" Foreground="White"/>
         </Button>
       </Grid>
-      <Grid Grid.Column="2" ColumnDefinitions="*,10" RowDefinitions="80">
-        <Button Name="seeTBA" Command="{Binding SeeTBA}" Classes="menu" Height="35" Grid.Row="0" Width="110" Margin="30,0,30,10" VerticalAlignment="Top">
-          <TextBlock FontWeight="Bold" Text="TBA Check"/>
+      <Grid Grid.Column="2" ColumnDefinitions="*" RowDefinitions="80">
+        <Button Classes="navbuttonselected" Name="seeTablets" Command="{Binding SeeTablets}" Grid.Row="0" Margin="30,0,30,60" Width="110" Height="35">
+          <TextBlock HorizontalAlignment="Center" VerticalAlignment="Center" FontWeight="Bold" Text="Tablets" Foreground="White"/>
         </Button>
       </Grid>
       <Grid Grid.Column="3" ColumnDefinitions="*,10" RowDefinitions="80">
-        <Button Name="seeGraph" Command="{Binding SeeGraph}" Classes="menu" Height="35" Grid.Row="0" Width="110" Margin="30,0,30,10" VerticalAlignment="Top">
-          <TextBlock FontWeight="Bold" Text="Visualize"/>
+        <Button Classes="navbutton" Name="seeTBA" Command="{Binding SeeTBA}" Height="35" Grid.Row="0" Width="110" Margin="30,0,30,10" VerticalAlignment="Top">
+          <TextBlock HorizontalAlignment="Center" VerticalAlignment="Center" FontWeight="Bold" Text="TBA Check" Foreground="White"/>
         </Button>
       </Grid>
       <Grid Grid.Column="4" ColumnDefinitions="*,10" RowDefinitions="80">
-        <Button Name="tryUSB" Command="{Binding TryUSB}" Classes="menu" Height="35" Grid.Row="0" Width="110" Margin="30,0,30,10" VerticalAlignment="Top">
-          <TextBlock FontWeight="Bold" Text="USBTest"/>
+        <Button Classes="navbutton" Name="seeGraph" Command="{Binding SeeGraph}" Height="35" Grid.Row="0" Width="110" Margin="30,0,30,10" VerticalAlignment="Top">
+          <TextBlock HorizontalAlignment="Center" VerticalAlignment="Center" FontWeight="Bold" Text="Visualize" Foreground="White"/>
         </Button>
       </Grid>
       <Grid Grid.Column="5" ColumnDefinitions="*,10" RowDefinitions="80">
-        <Button Name="seeTeams" Command="{Binding SeeTeams}" Classes="menu" Height="35" Grid.Row="0" Width="110" Margin="30,0,30,10" VerticalAlignment="Top">
-          <TextBlock FontWeight="Bold" Text="Teams"/>
+        <Button Classes="navbutton" Name="tryUSB" Command="{Binding TryUSB}" Height="35" Grid.Row="0" Width="110" Margin="30,0,30,10" VerticalAlignment="Top">
+          <TextBlock HorizontalAlignment="Center" VerticalAlignment="Center" FontWeight="Bold" Text="Test USB" Foreground="White"/>
+        </Button>
+      </Grid>
+      <Grid Grid.Column="6" ColumnDefinitions="*,10" RowDefinitions="80">
+        <Button Classes="navbutton" Name="seeTeams" Command="{Binding SeeTeams}" Height="35" Grid.Row="0" Width="110" Margin="30,0,30,10" VerticalAlignment="Top">
+          <TextBlock HorizontalAlignment="Center" VerticalAlignment="Center" FontWeight="Bold" Text="Teams" Foreground="White"/>
         </Button>
       </Grid>
 
@@ -99,6 +135,17 @@
 
 
 
+    </Grid>
+    <Grid Grid.Row="0" HorizontalAlignment="Right" Margin="30,10,30,30" ColumnDefinitions="52,52,52">
+      <Border Background="#1E1E1E" BorderBrush="Black" BorderThickness="2,0,0,2" Height="40" Width="40" CornerRadius="20" HorizontalAlignment="Center" Grid.Column="0">
+        <TextBlock Text="B" Foreground="White" FontWeight="Bold" HorizontalAlignment="Center" VerticalAlignment="Center"/>
+      </Border>
+      <Border Background="#1E1E1E" BorderBrush="Black" BorderThickness="2,0,0,2" Height="40" Width="40" CornerRadius="20" HorizontalAlignment="Center" Grid.Column="1">
+        <TextBlock Text="U" Foreground="White" FontWeight="Bold" HorizontalAlignment="Center" VerticalAlignment="Center"/>
+      </Border>
+      <Border Background="#1E1E1E" BorderBrush="Black" BorderThickness="2,0,0,2" Height="40" Width="40" CornerRadius="20" HorizontalAlignment="Center" Grid.Column="2">
+        <TextBlock Text="I" Foreground="White" FontWeight="Bold" HorizontalAlignment="Center" VerticalAlignment="Center"/>
+      </Border>
     </Grid>
     <Grid Grid.Row="1" VerticalAlignment="Center">
       <Border BorderBrush="Transparent" Grid.Row="0" Grid.Column="0" Name="tablets" Opacity="1" IsVisible="True">
@@ -118,26 +165,31 @@
       </Border>
       
     </Grid>
-    <Grid Grid.Row="1" HorizontalAlignment="Right" VerticalAlignment="Bottom" ColumnDefinitions="75,50" Margin="0,15,0,5">
-      <TextBlock Grid.Column="0" Text="{Binding MatchNumString}" FontWeight="ExtraBold" VerticalAlignment="Center" FontSize="17"/>
-      <Grid Grid.Column="1" RowDefinitions="26,26">
-        <Button Grid.Row="0" Command="{Binding NextMatch}" Name="matchUp" VerticalAlignment="Bottom" Margin="0,0,0,2">
-          <Button.Template>
-            <ControlTemplate TargetType="{x:Type Button}">
-              <Image Source="resm:LightMasterMVVM.Assets.caret-up.png"/>
-            </ControlTemplate>
-          </Button.Template>
-        </Button>
+    <Grid Grid.Row="1" HorizontalAlignment="Right" VerticalAlignment="Bottom" Margin="0,15,15,15">
+      <Border Background="#1E1E1E" BorderBrush="Black" BorderThickness="3,0,0,3" CornerRadius="6" Padding="22,12,12,12">
+        <Grid ColumnDefinitions="85,50">
+          <TextBlock Grid.Column="0" Text="{Binding MatchNumString}" Foreground="White" FontWeight="Bold" VerticalAlignment="Center" FontSize="17"/>
+          <Grid Grid.Column="1" RowDefinitions="26,26">
+            <Button Grid.Row="0" Command="{Binding NextMatch}" Name="matchUp" VerticalAlignment="Bottom" Margin="0,0,0,1">
+              <Button.Template>
+                <ControlTemplate TargetType="{x:Type Button}">
+                  <Image Source="resm:LightMasterMVVM.Assets.caret-up.png"/>
+                </ControlTemplate>
+              </Button.Template>
+            </Button>
 
 
-        <Button Grid.Row="1" Command="{Binding PrevMatch}" Name="matchDown" VerticalAlignment="Top" Margin="0,2,0,0">
-          <Button.Template>
-            <ControlTemplate TargetType="{x:Type Button}">
-              <Image Source="resm:LightMasterMVVM.Assets.caret-down.png"/>
-            </ControlTemplate>
-          </Button.Template>
-        </Button>
-      </Grid>
+            <Button Grid.Row="1" Command="{Binding PrevMatch}" Name="matchDown" VerticalAlignment="Top" Margin="0,1,0,0" IsVisible="False">
+              <Button.Template>
+                <ControlTemplate TargetType="{x:Type Button}">
+                  <Image Source="resm:LightMasterMVVM.Assets.caret-down.png"/>
+                </ControlTemplate>
+              </Button.Template>
+            </Button>
+          </Grid>
+        </Grid>
+      </Border>
+      
       
       
     </Grid>
